--- a/eMotorwerksCheckout/pom.xml
+++ b/eMotorwerksCheckout/pom.xml
@@ -32,6 +32,12 @@
             <version>3.11.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-remote-driver</artifactId>
+            <version>3.11.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
